src/views/Home/components/MouseBtn.css
.buy-mouse-btn {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #960800;
  border: 0;
  border-radius: 16px;
  box-shadow: inset 0px -1px 0px rgb(14 14 44 / 40%);
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 16px;
  font-weight: 600;
  width: 100%;
  height: 48px;
  line-height: 1;
  -webkit-letter-spacing: 0.03em;
  -moz-letter-spacing: 0.03em;
  -ms-letter-spacing: 0.03em;
  letter-spacing: 0.03em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  padding: 0 24px;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  opacity: 1;
  text-align: center;
	width: 10%;
	color: wheat !important;
	margin-top: 1.5vh;
	margin-left: 1vw;
	background: linear-gradient(90deg, rgba(240,185,11,1) 0%, rgba(255,117,25,1) 35%, rgba(229,91,0,1) 100%);
	background-size: 600%;
	-webkit-animation: anime 2s linear infinite;
	animation: anime 2s linear infinite;
  color: black !important;
}
     
@keyframes anime {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}


@media screen and (max-width: 768px) {
  .buy-snek-btn {
  	padding: 2rem;
  	padding-right: 3rem;
  	padding-left: 3rem;
  	margin-left: 2vw;
  }
}

